# file-system

./: README.md
.github/: CODEOWNERS  PUBLISHERS
.github/workflows/: file-system-interface-cd.yaml  file-system-interface-ci.yaml  file-system-plugin-js-cd.yaml  file-system-plugin-js-ci.yaml  file-system-plugin-kt-cd.yaml  file-system-plugin-kt-ci.yaml  file-system-plugin-py-cd.yaml  file-system-plugin-py-ci.yaml  file-system-plugin-rs-cd.yaml  file-system-plugin-rs-ci.yaml  fs-plugin-js-cd.yaml  fs-plugin-js-ci.yaml  fs-plugin-js-release-pr.yaml
implementations/js/: README.md  package.json  polywrap.yaml
implementations/js/src/: index.ts  schema.graphql
implementations/js/src/__tests__/: e2e.spec.ts
implementations/js/src/__tests__/types/: polywrap.graphql  polywrap.yaml
implementations/js/src/utils/: fileSystemEncodingToBufferEncoding.ts
implementations/kt/: .gitignore  build.gradle.kts  package.json  polywrap.graphql  polywrap.yaml  settings.gradle.kts
implementations/kt/convention-plugins/src/main/kotlin/: convention.publication.gradle.kts
implementations/kt/src/commonMain/kotlin/io/polywrap/plugins/filesystem/: FileSystemPlugin.kt
implementations/kt/src/commonMain/kotlin/io/polywrap/plugins/filesystem/wrap/: module.kt  types.kt  wrap.info.kt
implementations/kt/src/test/kotlin/io/polywrap/plugins/filesystem/: FileSystemPluginIntegrationTest.kt  FileSystemPluginTest.kt
implementations/py/: README.md  package.json  pyproject.toml
implementations/py/tests/integration/: test_exists.py  test_mkdir.py  test_read_file.py  test_read_file_as_string.py  test_rm.py  test_rmdir.py  test_write_file.py
implementations/py/tests/unit/: test_exists.py  test_mkdir.py  test_read_file.py  test_read_file_as_string.py  test_rm.py  test_rmdir.py  test_write_file.py
implementations/rs/: Cargo.toml  README.md  package.json
implementations/rs/src/: lib.rs  schema.graphql
implementations/rs/src/wrap/: module.rs  types.rs  wrap.info.rs
implementations/rs/tests/: e2e.rs
implementations/rs/tests/it/: main.rs
interface/: README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
interface/resources/: README.md
