[package]
name = "polywrap_fs_plugin"
version = "0.0.1-beta.3"
license = "MIT"
description = "Polywrap rust File system plugin"
edition = "2021"

[dependencies]
polywrap_core = { version = "0.1.6-beta.5" }
polywrap_plugin = { version = "0.1.6-beta.5" }
polywrap_msgpack = { version = "0.1.6-beta.5" }
polywrap_resolvers = { version = "0.1.6-beta.5" }
wrap_manifest_schemas = { version = "0.1.6-beta.5" }
serde = { version = "1.0.145", features = ["derive"] }

rm_rf = "0.6.2"
serde_bytes = "0.11.9"

[dev-dependencies]
polywrap_client = { version = "0.1.6-beta.5" }