[package]
name = "polywrap_fs_plugin"
version = "0.0.1-beta.4"
license = "MIT"
description = "Polywrap rust File system plugin"
edition = "2021"

[dependencies]
polywrap_core = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_plugin = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_msgpack = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_resolvers = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
serde = { version = "1.0.145", features = ["derive"] }


rm_rf = "0.6.2"
serde_bytes = "0.11.9"
thiserror = "1.0.40"

[dev-dependencies]
polywrap_client = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
